# gldf-rs-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
tests/data/: product.xml  test.gldf  test.json
