[package]
name = "gldf_rs_python"
version = "0.1.0"
edition = "2018"
authors = ["holger <trahe@mac.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gldf_rs_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
#gldf-rs = {path = "../gldf-rs"}
gldf-rs = {git = "https://github.com/holg/gldf-rs"}