[package]
name = "gldf_rs_python"
version = "0.1.0"
edition = "2018"
authors = ["Holger Trahe <trahe@mac.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gldf_rs_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
#gldf-rs = {path = "../gldf-rs"}
gldf-rs = {git = "https://github.com/holg/gldf-rs/", branch="json_refactor"}

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"