[package]
name = "gldf_rs_python"
version = "0.2.0"
edition = "2018"
authors = ["Holger Trahe <trahe@mac.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gldf_rs_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"]}
gldf-rs = "0.2"
#gldf-rs = {path = "../gldf-rs"}
openssl = { version = "0.10.57", features = ["vendored"] }
#gldf-rs = {git = "https://github.com/holg/gldf-rs/", branch = "staging"}

[features]
# must be enabled when building with `cargo build`, maturin enables this automatically
extension-module = ["pyo3/extension-module"]
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
[build-dependencies]
version_check = {version = "0.9.4"}
# used where logic has to be version/distribution specific, e.g. pypy
pyo3-build-config = { version = "0.19.2" }